# currency-conversion

./: README.md  docker-compose.yml  main.yml  pyproject.toml  run.py
.github/workflows/: Dockerfile  main.yml
deploy/: Dockerfile
src/: alembic.ini  application.py  database.py  external_service.py  models.py  repository.py  routes.py  schemas.py  service.py  settings.py
src/migrations/: env.py
src/migrations/versions/: 20240222113022_add_currency_table.py
src/tests/: conftest.py  factories.py  test_currency_api.py
